--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -111,6 +111,12 @@
   {dyer2013boa}
 
 \qte
+  [Luis Fernando Cort{\'e}s-Coy]
+  {luis-fernando-cortes-coy.jpg}
+  {The results of the user study demonstrate that 84\% of the \ul{generated} commit messages do not miss essential information required to understand the changes, 25\% of them are concise, and in 39\% of the cases the generated messages are easy to read and understand.}
+  {cortes2014automatically}
+
+\qte
   [Shane McIntosh]
   {shane-mcintosh.jpg}
   {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
