--- a/main.bib
+++ b/main.bib
@@ -634,3 +634,12 @@
   pages={33--42},
   year={2010}
 }
+
+@inproceedings{cortes2014automatically,
+  title={{On Automatically Generating Commit Messages via Summarization of Source Code Changes}},
+  author={Cort{\'e}s-Coy, Luis Fernando and Linares-V{\'a}squez, Mario and Aponte, Jairo and Poshyvanyk, Denys},
+  booktitle={{Proceedings of the 14th International Working Conference on Source Code Analysis and Manipulation}},
+  pages={275--284},
+  year={2014},
+  organization={IEEE}
+}
