--- a/main.bib
+++ b/main.bib
@@ -643,3 +643,11 @@
   year={2014},
   organization={IEEE}
 }
+
+@article{zhang2024automatic,
+  title={{Automatic Commit Message Generation: A Critical Review and Directions for Future Work}},
+  author={Zhang, Yuxia and Qiu, Zhiqing and Stol, Klaas-Jan and Zhu, Wenhui and Zhu, Jiaxin and Tian, Yingchen and Liu, Hui},
+  journal={{IEEE Transactions on Software Engineering}},
+  year={2024},
+  publisher={IEEE}
+}
