--- a/main.bib
+++ b/main.bib
@@ -651,3 +651,20 @@
   year={2024},
   publisher={IEEE}
 }
+
+@inproceedings{hindle2008large,
+  title={{What Do Large Commits Tell Us? A taxonomical study of large commits}},
+  author={Hindle, Abram and German, Daniel M. and Holt, Ric},
+  booktitle={{Proceedings of the International Working Conference on Mining Software Repositories}},
+  pages={99--108},
+  year={2008}
+}
+
+@inproceedings{li2023commit,
+  title={{Commit Message Matters: Investigating Impact and Evolution of Commit Message Quality}},
+  author={Li, Jiawei and Ahmed, Iftekhar},
+  booktitle={Proceedings of the 45th International Conference on Software Engineering (ICSE)},
+  pages={806--817},
+  year={2023},
+  organization={IEEE}
+}
