--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -144,7 +144,7 @@
 \qte
   [Iftekhar Ahmed]
   {iftekhar-ahmed.jpg}
-  {Commit message quality has an impact on software defect proneness, and the overall quality of the commit messages decreases over time, while developers believe they are writing better commit messages.}
+  {Commit message \ul{quality} has an impact on software \ul{defect proneness}, and the overall quality of the commit messages \ul{decreases} over time, while developers believe they are writing better commit messages.}
   {li2023commit}
 
 \qte
