--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -28,6 +28,12 @@
 \plush{\sqmTitlePage{20}{}}
 
 \qte
+  [German Daniel]
+  {german-daniel.jpg}
+  {Developers take care to explain, in each MR, the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
+  {german2004using}
+
+\qte
   [Ahmed E. Hassan]
   {ahmed-hassan.jpg}
   {The Mining Software Repositories (\ul{MSR}) field is maturing thanks to the rich, extensive, and readily available software repositories... After four successful years as ICSE's largest workshop, MSR became a Working Conference in 2008.}
