--- a/main.bib
+++ b/main.bib
@@ -668,3 +668,14 @@
   year={2023},
   organization={IEEE}
 }
+
+@article{german2004using,
+  title={{Using Software Trails to Reconstruct the Evolution of Software}},
+  author={German, Daniel M.},
+  journal={{Journal of Software Maintenance and Evolution: Research and Practice}},
+  volume={16},
+  number={6},
+  pages={367--384},
+  year={2004},
+  publisher={Wiley Online Library}
+}
