--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -28,9 +28,18 @@
 \plush{\sqmTitlePage{20}{}}
 
 \qte
+  [Audris Mockus]
+  {audris-mockus.jpg}
+  {Our hypothesis is that a textual description field of a change is essential to understanding why that change was performed. Also, we expect that difficulty, size, and interval would vary strongly across different types of changes.}
+  {mockus2000identifying}
+
+\pitch{\includegraphics[width=.95\linewidth]{mr-classes.png}
+\source{mockus2000identifying}}
+
+\qte
   [German Daniel]
   {german-daniel.jpg}
-  {Developers take care to explain, in each MR, the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
+  {Developers take care to explain, in each \ul{Modification Request} (MR), the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
   {german2004using}
 
 \qte
