--- a/main.bib
+++ b/main.bib
@@ -679,3 +679,12 @@
   year={2004},
   publisher={Wiley Online Library}
 }
+
+@inproceedings{mockus2000identifying,
+  title={{Identifying Reasons for Software Changes Using Historic Databases}},
+  author={Mockus, Audris and Votta, Lawrence G.},
+  booktitle={{Proceedings of the International Conference on Software Maintenance}},
+  pages={120--130},
+  year={2000},
+  organization={IEEE}
+}
