--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -28,9 +28,15 @@
 \plush{\sqmTitlePage{20}{}}
 
 \qte
+  [David Atkins]
+  {david-atkins.jpg}
+  {Observation is that the change history of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
+  {atkins1999using}
+
+\qte
   [Audris Mockus]
   {audris-mockus.jpg}
-  {Our hypothesis is that a textual description field of a change is essential to understanding why that change was performed. Also, we expect that difficulty, size, and interval would vary strongly across different types of changes.}
+  {Our hypothesis is that a \ul{textual description} field of a change is essential to understanding why that change was performed. Also, we expect that difficulty, size, and interval would vary strongly across different types of changes.}
   {mockus2000identifying}
 
 \pitch{\includegraphics[width=.95\linewidth]{mr-classes.png}
