--- a/main.bib
+++ b/main.bib
@@ -688,3 +688,11 @@
   year={2000},
   organization={IEEE}
 }
+
+@inproceedings{atkins1999using,
+  title={{Using Version Control Data to Evaluate the Impact of Software Tools}},
+  author={Atkins, David and Ball, Thomas and Graves, Todd and Mockus, Audris},
+  booktitle={{Proceedings of the 21st International Conference on Software Engineering}},
+  pages={324--333},
+  year={1999}
+}
