--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -28,6 +28,12 @@
 \plush{\sqmTitlePage{20}{}}
 
 \qte
+  [Marc J. Rochkind]
+  {marc-rochkind.jpg}
+  {Where the change was made, that is, to what source lines, and what the change actually was is recorded by the nature of the \ul{deltas} themselves. The \ul{reason} for the delta is not recorded automatically; it must be supplied by the programmer adding the delta, but it is required. The \ul{quality} of the reason (like the quality of the change itself) depends on the conscientiousness of the programmer.}
+  {rochkind1975source}
+
+\qte
   [David Atkins]
   {david-atkins.jpg}
   {Observation is that the change history of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
