--- a/main.bib
+++ b/main.bib
@@ -696,3 +696,13 @@
   pages={324--333},
   year={1999}
 }
+
+@article{rochkind1975source,
+  title={{The Source Code Control System}},
+  author={Rochkind, Marc J.},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={4},
+  pages={364--370},
+  year={1975},
+  publisher={IEEE}
+}
