--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -34,6 +34,19 @@
   {rochkind1975source}
 
 \qte
+  [todd-graves.jpg]
+  {todd-graves.jpg}
+  {By studying effort at the level of \ul{individual changes}, we are able to judge the influence of factors whose \ul{contributions} are not estimable at a large project level due to aggregation.}
+  {graves1998inferring}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=.9\linewidth]{athcm.png}
+\par\columnbreak\par
+``Effort, measured in Average Technical Head Count Months (ATHCM), is recorded for each person every month broken down by charging numbers. The data are obtained from bi-weekly time sheets... The eleven developers completed 2794 changes (\ul{Maintenance Requests}) in the 45 month period under study.''
+\source{graves1998inferring}
+\end{multicols}}
+
+\qte
   [David Atkins]
   {david-atkins.jpg}
   {Observation is that the change history of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
