--- a/main.bib
+++ b/main.bib
@@ -706,3 +706,12 @@
   year={1975},
   publisher={IEEE}
 }
+
+@inproceedings{graves1998inferring,
+  title={{Inferring Change Effort from Configuration Management Databases}},
+  author={Graves, Todd L. and Mockus, Audris},
+  booktitle={{Proceedings of the Fifth International Software Metrics Symposium}},
+  pages={267--273},
+  year={1998},
+  organization={IEEE}
+}
