--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -34,7 +34,7 @@
   {rochkind1975source}
 
 \qte
-  [todd-graves.jpg]
+  [Todd Graves]
   {todd-graves.jpg}
   {By studying effort at the level of \ul{individual changes}, we are able to judge the influence of factors whose \ul{contributions} are not estimable at a large project level due to aggregation.}
   {graves1998inferring}
