--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -22,7 +22,7 @@
 
 \documentclass{article}
 \usepackage{../sqm}
-\newcommand*\thetitle{Commits}
+\newcommand*\thetitle{Commits Density}
 \begin{document}
 
 \plush{\sqmTitlePage{20}{}}
