--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -44,7 +44,11 @@
 \end{itemize}
 }
 
-\pitch{\pptBanner{Metrics for Object-Oriented Design (MOOD)}\pptQuote{fernando-brito-e-abreu.jpg}{Being able to predict some software quality characteristics based on the design, is one of our great motivations. This ability will allow the designing process to be guided, for instance, by means of \ul{heuristics}.}{\textit{Object-oriented software engineering: Measuring and controlling the development process}, \ul{Fernando Brito e Abreu} and Rog{\'e}rio Carapu{\c{c}}a, Proceedings of the 4th International Conference on Software Quality, 1994}}
+\qte
+  [Fernando Brito e Abreu]
+  {fernando-brito-e-abreu.jpg}
+  {\textbf{Metrics for Object-Oriented Design (MOOD)}: Being able to predict some software quality characteristics based on the design, is one of our great motivations. This ability will allow the designing process to be guided, for instance, by means of \ul{heuristics}.}{\textit{Object-oriented software engineering: Measuring and controlling the development process.}
+  {brito1994object}
 
 \pptBanner{Method Hiding Factor (MHF)}
 \begin{multicols}{2}
@@ -158,7 +162,11 @@ maximum number of possible distinct polymorphic situations.''
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{../07-LCOM/chris-kemerer.jpg}{The inheritance hierarchy, a directed acyclic graph will be described as a tree structure with classes as nodes, leaves and a root. In any design application, there can be many possible \ul{hierarchies of classes}. Design choices on the hierarchy employed to represent the application are essentially choices about restricting or expanding the scope of properties of the objects in the application.}{Shyam R. Chidamber and \ul{Chris F. Kemerer}, \textit{A Metrics Suite for Object Oriented Design}, IEEE Transactions on Software Engineering, 20.6, 1994}}
+\qte
+  [Chris F. Kemerer]
+  {../07-LCOM/chris-kemerer.jpg}
+  {The inheritance hierarchy, a directed acyclic graph will be described as a tree structure with classes as nodes, leaves and a root. In any design application, there can be many possible \ul{hierarchies of classes}. Design choices on the hierarchy employed to represent the application are essentially choices about restricting or expanding the scope of properties of the objects in the application.}
+  {chidamber1994metrics}
 
 \pptBanner{Depth of Inheritance Tree (DIT)}
 \begin{multicols}{2}
@@ -227,9 +235,16 @@ class Book
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{book.jpg}{A small number of classes may be responsible for a large number of the methods that executed in an application, and that if testing effort were concentrated on these outlier classes, a bulk of the dynamic behavior of the object oriented systems can be checked for customer acceptance.}{Shyam R. Chidamber and Chris F. Kemerer, \textit{A Metrics Suite for Object Oriented Design}, IEEE Transactions on Software Engineering, 20.6, 1994}}
+\qte
+  {book.jpg}
+  {A small number of classes may be responsible for a large number of the methods that executed in an application, and that if testing effort were concentrated on these outlier classes, a bulk of the dynamic behavior of the object oriented systems can be checked for customer acceptance.}
+  {chidamber1994metrics}
 
-\pitch{\pptQuote{mark-lorenz.jpg}{Number of Messages (NOM) measures the number of messages sent in a method, segregated by type of message.}{\textit{Object-Oriented Software Metrics: a Practical Guide}, \ul{Mark Lorenz} and Jeff Kidd, Prentice-Hall, Inc., 1994}}
+\qte
+  [Mark Lorenz]
+  {mark-lorenz.jpg}
+  {Number of Messages (NOM) measures the number of messages sent in a method, segregated by type of message.}
+  {lorenz1994object}
 
 \pptBanner{Number of Messages (NOM)}
 \begin{multicols}{2}
@@ -271,9 +286,6 @@ class Book
   \textit{An Overview of Object-Oriented Design Metrics},
     Daniel Rodriguez and Rachel Harrison,
     The University of Reading, 2001 \par
-  \textit{Object-Oriented Software Metrics: a Practical Guide},
-    Mark Lorenz and Jeff Kidd,
-    Prentice-Hall, Inc., 1994 \par
   \href{https://www.yegor256.com/2014/05/05/oop-alternative-to-utility-classes.html}{OOP Alternative to Utility Classes} (2014) \par
   \href{https://www.yegor256.com/2016/04/12/java-annotations-are-evil.html}{Java Annotations Are a Big Mistake} (2016) \par
   \href{https://www.yegor256.com/2014/12/15/how-much-your-objects-encapsulate.html}{How Much Your Objects Encapsulate?} (2014) \par
