--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -42,7 +42,7 @@
 \pitch{\begin{multicols}{2}
 \includegraphics[width=.9\linewidth]{athcm.png}
 \par\columnbreak\par
-``Effort, measured in Average Technical Head Count Months (ATHCM), is recorded for each person every month broken down by charging numbers. The data are obtained from bi-weekly time sheets... The eleven developers completed 2794 changes (\ul{Maintenance Requests}) in the 45 month period under study.''
+``Effort, measured in Average Technical Head Count Months (ATHCM), is recorded for each person every month broken down by charging numbers... The eleven developers completed 2794 changes (\ul{Maintenance Requests}) in the 45 month period under study.''
 \source{graves1998inferring}
 \end{multicols}}
 
