--- a/main.bib
+++ b/main.bib
@@ -715,3 +715,18 @@
   year={1998},
   organization={IEEE}
 }
+
+@book{lorenz1994object,
+  title={{Object-Oriented Software Metrics: A Practical Guide}},
+  author={Lorenz, Mark and Kidd, Jeff},
+  year={1994},
+  publisher={Prentice-Hall, Inc.}
+}
+
+@inproceedings{brito1994object,
+  title={{Object-Oriented Software Engineering: Measuring and Controlling the Development Process}},
+  author={Brito, Fernando and dos Santos Carapu{\c{c}}a, Rog{\'e}rio},
+  booktitle={{Proceedings of the 4th International Conference on Software Quality}},
+  pages={1--8},
+  year={1994}
+}
