--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -108,11 +108,10 @@
     \item Function Points
 
     \item Defects Density
-
     \item Comments Density
+    \item Commits Density
 
 {\color{gray}
-    \item Commits
     \item CI Failures Rate
 
     \item Stars
@@ -120,7 +119,6 @@
     \item Forks and Pull Requests
 
     \item Instruction path length
-    \item Number of methods, classes, etc.
 
     \item Build Time \& Stability
     \item Algorithmic complexity Big-O
