--- a/main.bib
+++ b/main.bib
@@ -730,3 +730,27 @@
   pages={1--8},
   year={1994}
 }
+
+@misc{fowler2006,
+  author = {Fowler, Martin},
+  title = {{Continuous Integration}},
+  howpublished = {\url{http://martinfowler.com/articles/continuousIntegration.html}},
+  year = {2006},
+  note = {[Online; accessed 07-02-2024]}
+}
+
+@inproceedings{hilton2017trade,
+  title={{Trade-Offs in Continuous Integration: Assurance, Security, and Flexibility}},
+  author={Hilton, Michael and Nelson, Nicholas and Tunnell, Timothy and Marinov, Darko and Dig, Danny},
+  booktitle={{Proceedings of the 11th Joint Meeting on Foundations of Software Engineering}},
+  pages={197--207},
+  year={2017}
+}
+
+@inproceedings{hilton2016usage,
+  title={{Usage, Costs, and Benefits of Continuous Integration in Open-Source Projects}},
+  author={Hilton, Michael and Tunnell, Timothy and Huang, Kai and Marinov, Darko and Dig, Danny},
+  booktitle={{Proceedings of the 31st International Conference on Automated Software Engineering}},
+  pages={426--437},
+  year={2016}
+}
