--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -111,19 +111,15 @@
     \item Comments Density
     \item Commits Density
 
+    \item Builds
+
 {\color{gray}
-    \item CI Failures Rate
+    \item Stars and Forks
+    \item Neural Metrics
 
-    \item Stars
-    \item Contributors
-    \item Forks and Pull Requests
-
-    \item Instruction path length
-
-    \item Build Time \& Stability
-    \item Algorithmic complexity Big-O
-
-    \item Neural Metrics}
+    % \item Instruction path length
+    % \item Algorithmic complexity Big-O
+}
 \end{enumerate}
 
 Порядок лекций может меняться, а тематика корректироваться в зависимости от интереса аудитории.
