--- a/sqm.sty
+++ b/sqm.sty
@@ -31,6 +31,8 @@
 \RequirePackage[static]{clicks}
 \RequirePackage[template,scheme=light]{ppt-slides}
 \RequirePackage[nocn,novert]{ffcode}
+\RequirePackage{bibentry}
+\RequirePackage{natbib}
 \RequirePackage{booktabs}
 \RequirePackage{tikz}
   \usetikzlibrary{positioning,calc,arrows,arrows.meta}
@@ -43,10 +45,10 @@
 ]
 
 \newcommand\sqmDisclaimer{{%
-  \color{grey}\ttfamily\footnotesize
+  \color{grey}\rmfamily\scriptsize
   All visual and text materials presented in this slidedeck are
   either originally made by the author or taken from public Internet
-  sources, such as website. Copyright belongs to their
+  sources, such as web sites. Copyright belongs to their
   respected authors.\par
 }}
 
@@ -81,8 +83,6 @@
   \bibliographystyle{plainnat}
 }
 
-\RequirePackage{bibentry}
-\RequirePackage{natbib}
 \AtEndDocument{%
   \begin{multicols}{2}
   \setlength{\bibsep}{.2em}
