--- a/main.bib
+++ b/main.bib
@@ -754,3 +754,46 @@
   pages={426--437},
   year={2016}
 }
+
+@article{parry2021survey,
+  title={{A Survey of Flaky Tests}},
+  author={Parry, Owain and Kapfhammer, Gregory M. and Hilton, Michael and McMinn, Phil},
+  journal={{ACM Transactions on Software Engineering and Methodology}},
+  volume={31},
+  number={1},
+  pages={1--74},
+  year={2021},
+  publisher={ACM New York, NY}
+}
+
+@inproceedings{lam2020understanding,
+  title={{Understanding Reproducibility and Characteristics of Flaky Tests Through Test Reruns in Java Projects}},
+  author={Lam, Wing and Winter, Stefan and Astorga, Angello and Stodden, Victoria and Marinov, Darko},
+  booktitle={{Proceedings of the 31st International Symposium on Software Reliability Engineering (ISSRE)}},
+  pages={403--413},
+  year={2020},
+  organization={IEEE}
+}
+
+@misc{micco2016,
+  author = {Micco, John},
+  title = {{Flaky Tests at Google and How We Mitigate Them}},
+  howpublished = {\url{https://testing.googleblog.com/2016/05/flaky-tests-at-google-and-how-we.html}},
+  year = {2016},
+  month = {May},
+  note = {[Online; accessed 25-02-2024]}
+}
+
+@article{micco2017state,
+  title={{The State of Continuous Integration Testing at Google}},
+  author={Micco, John},
+  year={2017},
+  journal={ICST}
+}
+
+@book{humble2010continuous,
+  title={{Continuous Delivery: Reliable Software Releases Through Build, Test, and Deployment Automation}},
+  author={Humble, Jez and Farley, David},
+  year={2010},
+  publisher={Pearson Education}
+}
