--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -28,6 +28,12 @@
 \plush{\sqmTitlePage{21}{}}
 
 \qte
+  [Michael Cusumano]
+  {michael-cusumano.jpg}
+  {[In Microsoft], the rule is that if developers check in code that `breaks' the build by preventing it from completing the recompilation, they must fix the defect immediately.}
+  {cusumano1997microsoft}
+
+\qte
   [Martin Fowler]
   {../06-coupling/martin-fowler.jpg}
   {For most projects, the XP guideline of a \ul{ten minute} build is perfectly within reason. Most of our modern projects achieve this. It's worth putting in concentrated effort to make it happen, because every minute chiseled off the build time is a minute \ul{saved} for each developer every time they commit.}
