--- a/main.bib
+++ b/main.bib
@@ -797,3 +797,14 @@
   year={2010},
   publisher={Pearson Education}
 }
+
+@article{cusumano1997microsoft,
+  title={{How Microsoft Builds Software}},
+  author={Cusumano, Michael A. and Selby, Richard W.},
+  journal={Communications of the ACM},
+  volume={40},
+  number={6},
+  pages={53--61},
+  year={1997},
+  publisher={ACM New York, NY, USA}
+}
