--- a/main.bib
+++ b/main.bib
@@ -808,3 +808,11 @@
   year={1997},
   publisher={ACM New York, NY, USA}
 }
+
+@inproceedings{vasilescu2015quality,
+  title={{Quality and Productivity Outcomes Relating to Continuous Integration in GitHub}},
+  author={Vasilescu, Bogdan and Yu, Yue and Wang, Huaimin and Devanbu, Premkumar and Filkov, Vladimir},
+  booktitle={{Proceedings of the 10th Joint Meeting on Foundations of Software Engineering}},
+  pages={805--816},
+  year={2015}
+}
