--- a/main.bib
+++ b/main.bib
@@ -816,3 +816,28 @@
   pages={805--816},
   year={2015}
 }
+
+@book{booch1994object,
+  title={{Object-Oriented Analysis and Design with Applications}},
+  author={Booch, Grady and Maksimchuk, Robert A. and Engle, Michael W. and Young, Bobbi J. and Connallen, Jim and Houston, Kelli A.},
+  year={1994},
+  publisher={Addison-Wesley}
+}
+
+@inproceedings{beck1998extreme,
+  title={{Extreme Programming: A Humanistic Discipline of Software Development}},
+  author={Beck, Kent},
+  booktitle={{International Conference on Fundamental Approaches to Software Engineering}},
+  pages={1--6},
+  year={1998},
+  organization={Springer}
+}
+
+@inproceedings{rausch2017empirical,
+  title={{An Empirical Analysis of Build Failures in the Continuous Integration Workflows of Java-Based Open-Source Software}},
+  author={Rausch, Thomas and Hummer, Waldemar and Leitner, Philipp and Schulte, Stefan},
+  booktitle={{Proceedings of the 14th International Conference on Mining Software Repositories}},
+  pages={345--355},
+  year={2017},
+  organization={IEEE}
+}
