--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -146,7 +146,19 @@
   ``On average, 41\% of builds fail because of test failures... On average, 30\% of errors occur in the first half of the build runtime. The later half is dominated by 70\% testfailures. Together with a build-retry approach, testfailures can cause long delays in the feedback loop.''
   \end{multicols}}
 
-\plush{\pptThought{\href{}{On October 16, 2018}, GitHub launched Actions}}
+\qte
+  [Romit Jain]
+  {romit-jain.jpg}
+  {We observed that team size generally \ul{increases} the number of build failures. The interesting observation here is the minima after which there is a positive curve.}
+  {jain2018brief}
+\pitch{\includegraphics[width=.5\linewidth]{team-size.png}
+  \par
+  \source{jain2018brief}}
+\pitch{\includegraphics[width=.5\linewidth]{productivity.png}
+  \par
+  \source{jain2018brief}}
+
+\plush{\pptThought{\href{}{On October 16, 2018}, \newline GitHub launched ``Actions''}}
 
 \qte
   [Wing Lam]
