--- a/main.bib
+++ b/main.bib
@@ -841,3 +841,12 @@
   year={2017},
   organization={IEEE}
 }
+
+@inproceedings{jain2018brief,
+  title={{A Brief Study on Build Failures in Continuous Integration: Causation and Effect}},
+  author={Jain, Romit and Singh, Saket Kumar and Mishra, Bharavi},
+  booktitle={{Proceedings of the Progress in Advanced Computing and Intelligent Engineering}},
+  pages={17--27},
+  year={2018},
+  organization={Springer}
+}
