--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -47,7 +47,7 @@
 \qte
   [Fernando Brito e Abreu]
   {fernando-brito-e-abreu.jpg}
-  {\textbf{Metrics for Object-Oriented Design (MOOD)}: Being able to predict some software quality characteristics based on the design, is one of our great motivations. This ability will allow the designing process to be guided, for instance, by means of \ul{heuristics}.}{\textit{Object-oriented software engineering: Measuring and controlling the development process.}
+  {\textbf{Metrics for Object-Oriented Design (MOOD)}: Being able to predict some software quality characteristics based on the design, is one of our great motivations. This ability will allow the designing process to be guided, for instance, by means of \ul{heuristics}.}
   {brito1994object}
 
 \pptBanner{Method Hiding Factor (MHF)}
